--- a/440cs_ir1.Rmd
+++ b/440cs_ir1.Rmd
@@ -56,13 +56,7 @@ ggplot(cardio_nas, aes(x = colnames.cardio., y = cardio_na_p, fill = colnames.ca
   coord_flip()
 ```
 
-We see several variables with missing data rates over 50 percent, and many more in the ~20-40% range. 
-```{r,echo=FALSE}
-# md.pattern(cardio %>% dplyr::select(DSSTROKE, DSMI))
-# cardio_aggr <- aggr(cardio,col=mdc(1:2),numbers=TRUE,sortVars=TRUE,
-# labels=names(cardio),cex.axis=.7, gap=3, 
-# ylab=c("Proportion missing","Missingness Pattern"))
-```
+We see several variables with missing data rates over 50 percent, and many more in the ~20-40% range.
 
 Most instances of large missing data are for events that likely never occurred, such as all the "days to first subsequent" variables like DSSTROKE (having a stroke in the future) and DSMI (having a non-fatal myocardianl infarction in the future), or "days to closest previous" variables like DPCABG (having a previous coronary artery bypass surgery).
 
@@ -130,7 +124,7 @@ marginplot(cardio[, c("HDL_R", "YRCATH_G")], col = mdc(1:2), cex.numbers = 0.4, 
 marginplot(cardio[, c("LDL_R", "YRCATH_G")], col = mdc(1:2), cex.numbers = 0.4, pch = 1)
 ```
 
-Through these margin plots, we can see there is a significant non-overlap in the distribution of YRCATH_G (year of catetherization) data depending on whether the laboratory measurements were missing versus observed. The majority of missing data on all these laboratory measurements comes from early years, while all the observed data comes from later years. A likely explanation is that these laboratory procedures were less common or accessible in the earlier years. From this, we can determine that this data is missing at random (MAR). 
+Through these margin plots, we can see there is a significant non-overlap in the distribution of YRCATH_G (year of catetherization) data depending on whether the laboratory measurements were missing versus observed. The majority of missing data on all these laboratory measurements comes from early years, while all the observed data comes from later years. A likely explanation is that these laboratory procedures were less common or accessible in the earlier years which would mean that this data is missing at random (MAR). 
 
 
 Through these exploratory data analysis and missing data visualizations, we can determine that significant portions of missing data are due to either events that never occurred and therefore cannot be recorded, possible negligence in recording certain measurements (MCAR), and reasons that depend on other observed variables, such as less accessible laboratory procedures in earlier years leading to missing data (MAR).
@@ -314,7 +308,7 @@ sum(cardio_new %>% is.na())/length(cardio_new)/nrow(cardio_new)
 #about 10% of data is missing--> m should be 10
 
 
-rerunMICE = TRUE
+rerunMICE = FALSE
 
 if(rerunMICE){
   imp = mice(cardio_new, m = 10)
