--- a/440cs_ir1.Rmd
+++ b/440cs_ir1.Rmd
@@ -247,11 +247,10 @@ Through these margin plots, we can see there is a significant non-overlap in the
 In summary, through these exploratory data analysis and missing data visualizations, we can determine that significant portions of missing data are due to either events that never occurred and therefore cannot be recorded, possible negligence in recording certain measurements (MCAR), and reasons that depend on other observed variables, such as less accessible laboratory procedures in earlier years leading to missing data (MAR). We also note that year of catetherization and age of patient are important variables that have especially significant effects towards death. 
 
 
-### Build Model
+## Build Model
 
-In order to address the issues associated with missing data, we built a complete case, and estimated survival functions using both Kaplan-Meier curves and Cox proportional hazards regression modelling.
+In order to build a model to determine factors associated with survival, we first explored relationships in isolation using Kaplan-Meier curves. We then selected medically relevant variables and variables we found to be significant through our Kaplan-Meier analysis and used those to do Cox proportional hazards regression modeling. These variables included demographic data, data on the severity of heart conditions, and selected lab data. Finally, we used MICE to impute missing data, and created a cox model on our imputed data set to evaluate the impact of missing data.
 
-[TODO: add more variables here to explore]
 
 ```{r, fig.height= 15, fig.width = 7}
 # select data we want
@@ -287,7 +286,10 @@ cardio_new = cardio %>%
   select(-WEIGHT_R, -HEIGHT_R, -DPMI)
 ```
 
-The plots below depict the Kaplan-Meier curves (the risk of death over time) of variables we found to demonstrate clear effects that we could draw causal inference from. The plots also include the p-value dervied from conducting log-rank tests on the Kaplan-Meier curves.
+### Kaplan-Meier Curves
+
+
+The plots below depict the Kaplan-Meier curves (the risk of death over time) of variables we found to demonstrate clear effects that we could draw inference from. The plots also include the p-value dervied from conducting log-rank tests on the Kaplan-Meier curves.
 </br>
 </br>
 The Kaplan-Meier curves are depictions of the variable's survival function over time. The probability of survival begins at 1 (time = 0), and approaches 0 as time goes to infinity. The log-rank test determines whether the differences between a variable's Kaplan-Meier curves are statistically significant. All of the variables examined had p-values <0.0001, implying that they were statistically significant.
@@ -297,7 +299,8 @@ The Kaplan-Meier curves are depictions of the variable's survival function over 
 
 #gender
 fit_gender=survfit(Surv(DAYS2LKA,DEATH)~GENDER,data=cardio_new)
-a = ggsurvplot(fit_gender,data=cardio_new,pval=TRUE)
+km1 = ggsurvplot(fit_gender,data=cardio_new,pval=TRUE) +
+  labs(title = "KM Curve for Gender")
 #age (low is <40)
 #fit_age=survfit(Surv(DAYS2LKA,DEATH)~AGE_G,data=cardio_new)
 #ggsurvplot(fit_age,data=cardio_new,pval=TRUE)
@@ -305,7 +308,8 @@ a = ggsurvplot(fit_gender,data=cardio_new,pval=TRUE)
 cardio_new=cardio_new%>%
   mutate(age_low=case_when(AGE_G%in%seq(1,4,1)~1,AGE_G%in%seq(4,13,1)~0))
 fit_age_low=survfit(Surv(DAYS2LKA,DEATH)~age_low,data=cardio_new)
-ggsurvplot(fit_age_low,data=cardio_new,pval=TRUE)
+km2 = ggsurvplot(fit_age_low,data=cardio_new,pval=TRUE) +
+  labs(title = "KM Curve for AGE")
 
 #race
 #fit_race=survfit(Surv(DAYS2LKA,DEATH)~RACE_G,data=cardio_new)
@@ -313,7 +317,8 @@ ggsurvplot(fit_age_low,data=cardio_new,pval=TRUE)
 
 #CHF severity
 fit_sev=survfit(Surv(DAYS2LKA,DEATH)~CHFSEV,data=cardio_new)
-ggsurvplot(fit_sev,data=cardio_new,pval=TRUE)
+km3 = ggsurvplot(fit_sev,data=cardio_new,pval=TRUE)+
+  labs(title = "KM Curve for CHF Severity")
 
 #year of catheter
 #fit_yr=survfit(Surv(DAYS2LKA,DEATH)~YRCATH_G,data=cardio_new)
@@ -328,7 +333,8 @@ cardio_new=cardio_new%>%
     CREATININE_R>=1.3~4
   ))
 fit_serum=survfit(Surv(DAYS2LKA,DEATH)~creatinine_levels,data=cardio_new)
-ggsurvplot(fit_serum,data=cardio_new,pval=TRUE)
+km4 = ggsurvplot(fit_serum,data=cardio_new,pval=TRUE) +
+  labs(title = "KM Curve for Creatinine")
 
 #total cholesterol
 cardio_new=cardio_new%>%
@@ -339,7 +345,8 @@ cardio_new=cardio_new%>%
     TOTCHOL_R>=205~4
   ))
 fit_chol=survfit(Surv(DAYS2LKA,DEATH)~chol_levels,data=cardio_new)
-ggsurvplot(fit_chol,data=cardio_new,pval=TRUE)
+km5 = ggsurvplot(fit_chol,data=cardio_new,pval=TRUE) +
+  labs(title = "KM Curve for Cholesterol")
 
 #high denisty lipid
 cardio_new=cardio_new%>%
@@ -361,30 +368,28 @@ cardio_new=cardio_new%>%
     LDL_R>=127~4
   ))
 fit_ldl=survfit(Surv(DAYS2LKA,DEATH)~ldl_levels,data=cardio_new)
-ggsurvplot(fit_ldl,data=cardio_new,pval=TRUE)
+km6 = ggsurvplot(fit_ldl,data=cardio_new,pval=TRUE) +
+  labs(title = "KM Curve for LDL")
+
+#ggsave("output/km.png", grid.arrange(km1$plot, km2$plot, km3$plot, km4$plot, km5$plot, km6$plot, nrow = 2), device = "png", width = 14, height = 7, units = "in")
 ```
+![](output/km.png)
 
 The Kaplan-Meier curves for the variable gender shows that females have a statistically significant higher risk of dying than males. In addition, the curves show that this difference in risk of death increases as time increases (the slope of the red, male, curve increases faster than the blue, female curve). 
-</br>
-</br>
+
 In order to determine whether there was an effect for age, we categorised an individual's age to  be low (<40) or high (>=40). The Kaplan-Meier curves for this variable show a distinguished difference in the risk of death for the two groups. Namely, individuals who are 40 or older have a statisitcally significant increased risk of death. Furthermore, as time passes, this difference increases furhter; in other words, as time passes individuals who are 40 or older have an increasing risk of dying when compared to those under the age of 40. Contextually, this is a reasonable outcome as individuals who are older are more likely to die than their juniors.
-</br>
-</br>
+
 The Kaplan-Meier curves for congestive heart failure (CHF) severity indicate that individuals who never experienced CHF have the least risk of dying than those have had CHF. Moreover, the risk of dying increases as CHF severity increases. Intuitively, this is a feasible outcome as individuals with the most severe CHF are characterised by an "inability to perform any physical activity without discomfort" and potential discomfort while resting; logically, individuals who experience this level of pain are at higher risk of dying than those with less severe symptoms.
-</br>
-</br>
+
 creatinine
-</br>
-</br>
+
 cholesterol
-</br>
-</br>
+
 ldl
-</br>
-</br>
+
 We will explore these relationships further using Cox proportional hazards regression modelling. Hopefully, the Cox regression methodology will provide more insight into how these differences in risk of dying manifest at a more granular level.
 
-[TO DO: finish write up^]
+### Complete Case Cox Model
 
 ```{r, eval = FALSE}
 cardio_new = cardio_new %>%
@@ -399,15 +404,13 @@ formula_call = Surv(DAYS2LKA, DEATH) ~ YRCATH_G + AGE_G + GENDER + RACE_G + HXSM
 
 fit.coxph <- coxph(formula_call, data = cardio_new)
 
-ggsave("output/cox_graph_complete_case.png", ggforest(fit.coxph, data=cardio_new), device = "png", width = 7, height = 10, units = "in")
+ggsave("output/cox_graph_complete_case.png", ggforest(fit.coxph, data=cardio_new), device = "png", width = 7, height = 7, units = "in")
 ```
-
+![](output/cox_graph_complete_case.png)
 The forest plot above illustrates the hazard ratios for different values of the covariates explored as estimated through Cox proportional hazards regression modelling. A hazard ratio >1 implies that individuals with the associated value for the covariate have an increased chance of dying. Intuitively, hazard ratios <1 imply that the individual indicate a decreased risk of dying.
-</br>
-</br>
+
 In order to run the Cox model, we established that our survival object would measure time with DAYS2LKA as we are working with censored, not interval, data, and we set the event to be 0 if the individual died and 1 if the individual stayed alive. We modelled the survival object using the following covariates: year of cardiac catheter (categorised), age in years (categorised), gender, race, history of smoking (binary), history of cerbrovascular disease (binary), congestive heart failure severity (binary), history of chronic obsructive pulmonary disease (binary), history of diabetes (binary), history of hyperlipidemia (binary), third hear sound (binary), maximum stenosis of left main artery, number of significantly diseased valves.
-</br>
-</br>
+
 Our forest plot indicates that as an individual's age increases from 18-39 their risk of dying decreases; however, this trend reverses for individuals ages 39 and over. Furthermore, the same trend occurs for white and non-white individuals, where non-white individuals are at higher risk of dying. Moreover, this trend appears in the variable CHFSEV as well, where individuals with a severity of 0 are the least at risk. Interestingly, YRCATH_G has decreasing risk as the group number moves from 1-3, then increases for groups 4-7.
 
 
@@ -415,7 +418,7 @@ Our forest plot indicates that as an individual's age increases from 18-39 their
 
 [TODO: justification for why we want to do MICE, why we chose the m we did, etc]
 
-
+### Multiple Imputation
 ```{r, eval = FALSE}
 # use multiple imputation with mice
 #note: this takes a long time to run, so toggle rerunMICE to recalculate
@@ -435,38 +438,36 @@ if(rerunMICE){
 densityplot(imp)
 
 #note, cant replace formula with formula_call here for some reason
-#coximpute = with(imp,coxph(Surv(DAYS2LKA, DEATH) ~ YRCATH_G + AGE_G + GENDER + RACE_G + HXSMOKE + HXCEREB + CHFSEV + HXCOPD + HXDIAB + HXHYL + S3 + LMST + NUMDZV + creatinine_levels + chol_levels + hdl_levels + ldl_levels))
-#summary(pool(coximpute))
+coximpute = with(imp,coxph(Surv(DAYS2LKA, DEATH) ~ YRCATH_G + AGE_G + GENDER + RACE_G + HXSMOKE + HXCEREB + CHFSEV + HXCOPD + HXDIAB + HXHYL + S3 + LMST + NUMDZV + creatinine_levels + chol_levels + hdl_levels + ldl_levels))
+summary(pool(coximpute))
 ```
 
-```{r}
-# compare methods
-# 
-# mice_output = summary(pool(coximpute)) %>% select(estimate, std.error)
-# mice_output$variable = rownames(mice_output)
-# mice_output$procedure = "MICE"
-# 
-# fixed_output = data.frame(estimate = summary(fit.coxph)$coefficients[,1],  std.error = summary(fit.coxph)$coefficients[,3])
-# fixed_output$variable = rownames(fixed_output)
-# fixed_output$procedure = "compete cases"
-# 
-# output = rbind(mice_output, fixed_output)
-# 
-# comparison_plot = ggplot(output, aes (x = variable, y = exp(estimate), color = procedure))+
-#   geom_point(shape = "square", size = 3)+
-#   geom_errorbar(aes(ymin = exp(estimate - 2 * std.error), ymax = exp(estimate + 2 * std.error))) +
-#   geom_hline(yintercept = 1) +
-#   coord_flip() +
-#   scale_y_continuous(trans = "log2")+
-#   labs(main = "Comparison of Procedures", x = "Variable", y = "Hazard Ratio", fill = "Procedure")+
-#   theme_minimal()
-# 
-# 
-# ggsave("output/cox_graph_compare.png", comparison_plot, device = "png", width = 7, height = 8, units = "in")
+### Comparison to Complete Case Model
+
+```{r, eval = FALSE}
+#compare methods
+
+mice_output = summary(pool(coximpute)) %>% select(estimate, std.error)
+mice_output$variable = rownames(mice_output)
+mice_output$procedure = "MICE"
+
+fixed_output = data.frame(estimate = summary(fit.coxph)$coefficients[,1],  std.error = summary(fit.coxph)$coefficients[,3])
+fixed_output$variable = rownames(fixed_output)
+fixed_output$procedure = "Compete Cases"
+
+output = rbind(mice_output, fixed_output)
+
+comparison_plot = ggplot(output, aes (x = variable, y = exp(estimate), color = procedure))+
+  geom_point(shape = "square", size = 3)+
+  geom_errorbar(aes(ymin = exp(estimate - 2 * std.error), ymax = exp(estimate + 2 * std.error))) +
+  geom_hline(yintercept = 1) +
+  coord_flip() +
+  scale_y_continuous(trans = "log2")+
+  labs(main = "Comparison of Procedures", x = "Variable", y = "Hazard Ratio", fill = "Procedure")+
+  theme_minimal()
+
+
+ggsave("output/cox_graph_compare.png", comparison_plot, device = "png", width = 7, height = 7, units = "in")
 
 ```
-
-```{r}
-#pred <- survfit(fit.coxph, cardio_new)
-#timepoints <- c(0, pred$YR_CATH_)
-```
+![](output/cox_graph_compare.png)
