--- a/440cs_ir1.Rmd
+++ b/440cs_ir1.Rmd
@@ -7,7 +7,7 @@ output:
   html_document: default
 ---
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = FALSE, message = FALSE, warning = FALSE}
 library(haven)
 library(dplyr)
 library(ggplot2)
